--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
         buildConfigField("String", "API_KEY", API_KEY)
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.yxhuang.androidtest.HiltTestRunner"
     }
 
     buildTypes {
@@ -118,5 +118,4 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:2.21.0"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
-
 }
