--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,9 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+
     // debug
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    
 }
