--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,5 +123,7 @@ dependencies {
 
     // debug
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
-    
+
+    // intent
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
 }
