--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,5 +123,8 @@ dependencies {
 
     // debug
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
-    
+
+    //test network
+    testImplementation "com.squareup.okhttp3:mockwebserver:3.14.9"
+    testImplementation "io.mockk:mockk-android:1.10.0"
 }
